* Sun May 08 2005 Jerry St.Clair <jds2@users.sourceforge.net>
  - Added 'CU_' prefix to BOOL, TRUE, FALSE in Headers/CUnit.h.
  - Added jam system option to build dll's on Windows.

* Sun May 01 2005 Jerry St.Clair <jds2@users.sourceforge.net>
  - Added callback for suite cleanup failure to TestRun.
  - Added processing of suite failure to interfaces.
  - Added output of version number from interfaces.

* Sun Apr 24 2005 Jerry St.Clair <jds2@users.sourceforge.net>
  - Streamlined jam build system.
  - jam now builds in compiler- and debug-specific subdirectories.
  - Bug fixes:
    - minor errors in doc/managing_tests.html. (cunit-Bugs-1161520)
    - fixed CU_ADD_TEST() macro definition in TestDB.h.
      (cunit-Bugs-1161527)
    - changed header Curses.h to CUCurses.h to avoid conflict
      with system curses.h on Windows.  (cunit-Bugs-1185382)
    - removed const qualifier from CU_get_failure_list() and
      and CU_get_run_summary() return values. (cunit-Bugs-1106644)

* Sun Jan 08 2005 Jerry St.Clair <jds2@users.sourceforge.net>
  - Bug fix: failures reported incorrectly in Basic interface
    from basic.c::basic_test_complete_message_handler()
    (bug report cunit-Bugs-1093861).

* Sat Oct 02 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Bug fix: update pReg after registry intialization in
    TestDB.c::test_CU_add_test().
    
* Sun Sep 26 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Bug fixes found in internal unit testing.
  - Update Linux build files.
  - Add Visual Studio 2003/VC7 solution & project files.

* Sun Sep 19 2004 Jerry St.Clair <jds2@users.sourceforge.net>
  - Changed test message handlers to pass test and suite (not
    just their names).  This is for future use.
  - Clarified behavior of CU_translate_special_characters() when
    szDest is too small to hold converted string (found in testing!).
  - Split out suite and test creation into distinct functions
    create_suite() & create_test() in TestDB.c.